Fix-001: Update java files